themes/bootstrap3/scss/components/js-tree.scss
/* --- Layout --- */
.hierarchy-tree {
  max-height: 75vh;
  overflow-y: auto;
}
@media (min-width: 768px) {
  .collection-hierarchytree {
    display: flex;
  }
  .collection-hierarchytree .tree-panel,
  .collection-hierarchytree #tree-preview {
    flex-basis: 50%;
    padding: 1rem;
  }
  #modal .collection-hierarchytree {
    display: block;
  }
  #modal .tree-panel {
    flex-basis: 100%;
    padding: 0;
  }
  #modal #tree-preview {
    display: none;
  }
}

/* --- Icons --- */
.jstree-ocl::before {
  display: inline-block;
  width: 1.5rem;
  padding-top: 2px;
  font-style: normal;
  text-align: center;
  text-decoration: inherit;
  cursor: pointer;
  speak: none;
}
.jstree-open > .jstree-ocl::before {
  content: "\25BD"; // Unicode white down-pointing triangle
}
.jstree-closed > .jstree-ocl::before {
  content: "\25B6"; // Unicode black right-pointing triangle
}
.jstree-leaf > .jstree-ocl::before {
  color: transparent;
  content: "\25B8"; // Unicode black right-pointing small triangle
}

.jstree-themeicon-custom {
  display: inline-block;
  width: 1.4em;
  height: 1em;
  vertical-align: text-bottom;
  background-repeat: no-repeat;
}

/* --- Look --- */
.jstree-children {
  padding: 0;
}
.jstree-node .jstree-children {
  padding-left: 1rem;
}

.jstree-clicked,
.jstree-clicked:active,
.jstree-clicked:focus,
.jstree-clicked:hover {
  &:not(.hierarchical-facet-anchor) {
    color: $list-group-active-color;
    background-color: $list-group-active-bg;

    .jstree-themeicon-custom {
      color: #fff;
      filter: invert(1);
    }
  }
}

.jstree-facet {
  padding: 0;

  .jstree-node.list-group-item {
    padding: 0.5rem;
  }

  .jstree-node .facet {
    padding: 2px 0;
    border: 0;
  }
}

.hierarchy-tree,
.jstree-facet {
  .jstree-initial-node {
    display: none;
  }
  .jstree-search a {
    font-style: italic;
    color: #8b0000;
    font-weight: bold;
  }
}
.jstree-node.list-group-item {
  margin-bottom: 0;
  border: 0;
  border-bottom: 1px solid $list-group-border;
  border-radius: 0;
}
.jstree-node.list-group-item.active:hover,
.jstree-node.list-group-item.active:focus {
  border-color: $list-group-border;
}

/* --- Record --- */
#hierarchyTreeHolder {
  overflow-x: hidden;
  border-right: 1px solid $gray-lighter;
}
#hierarchyTree .currentHierarchy > a,
#hierarchyTree .currentRecord a {
  font-weight: bold;
  color: #000;
}

/* --- Facets --- */
/* facet list styling */
.jstree-facet .jstree-container-ul {
  padding: 0;
}

li.jstree-facet,
li.jstree-node {
  list-style: none;
}
li.jstree-facet .badge {
  cursor: text;
}
.jstree-facet .jstree-ocl {
  float: left;
  &::before {
    width: 1.3rem;
  }
}

/* RTL */
body.rtl {
  .jstree-node .jstree-children {
    padding-left: 0;
    padding-right: 1rem;
  }
  .jstree-closed > .jstree-ocl::before {
    content: "\25C0"; // Unicode black left-pointing triangle
  }
  .jstree-leaf > .jstree-ocl::before {
    content: "\25C2"; // Unicode black left-pointing small triangle
  }
  .jstree-facet .jstree-ocl {
    float: right;
  }
  .jstree-facet .active > .jstree-anchor .facet {
      padding-left: 0;
      padding-right: 2px;
  }
}

